ndb - bug#22672   fix another incorrect assertion